--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -2,6 +2,9 @@
 <resources>
 
     <string name="app_name">隐形桌面小部件+</string>
-    <string name="configure_label">选择活动</string>
+    <string name="configure_label">选择操作</string>
+    <string name="action_activities">活动</string>
+    <string name="action_do_nothing">呆若木鸡（即什么都不干）</string>
+    <string name="pick_activity">选择活动</string>
 
 </resources>
