--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
 <resources>
 
     <string name="app_name">Invisible Widget+</string>
-    <string name="configure_label">Pick activity</string>
+    <string name="configure_label">Pick action</string>
+    <string name="pick_activity">Pick activity</string>
+    <string name="action_do_nothing">Gaze at the user (which means doing nothing)</string>
+    <string name="action_activities">Activities</string>
 
 </resources>
