All hacks gone now (2.1.5.317)

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -4,6 +4,6 @@
     <string name="app_name">隐形桌面小部件+</string>
     <string name="configure_label">选择操作</string>
     <string name="action_activities">活动</string>
-    <string name="action_do_nothing">呆若木鸡（即什么都不干）</string>
+    <string name="action_do_nothing">什么都不干</string>
 
 </resources>
