--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="configure_label">Pick action</string>
     <string name="action_do_nothing">Do nothing</string>
     <string name="action_activities">Activities</string>
+    <string name="trigger_on_double_tap">Trigger on double tap</string>
 
 </resources>
